// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render highlighted words with highlightCaseSensitive 1`] = `
.emotion-0 {
  color: #000;
  line-height: 1.2;
  margin: 0;
  font-size: calc((13 / 13) * 13px);
  font-weight: normal;
}

.emotion-0 mark {
  background: #f0b849;
  border-radius: 2px;
  box-shadow: 0 0 0 1px rgba( 0,0,0,0.05 ) inset,0 -1px 0 rgba( 0,0,0,0.1 ) inset;
}

<span
  class="components-truncate components-text emotion-0 emotion-1 emotion-2"
  data-wp-c16t="true"
  data-wp-component="Text"
>
  <span
    class=""
  >
    Lorem ipsum.
  </span>
</span>
`;

exports[`Text snapshot tests should render correctly 1`] = `
.emotion-0 {
  color: #000;
  line-height: 1.2;
  margin: 0;
  font-size: calc((13 / 13) * 13px);
  font-weight: normal;
}

<span
  class="components-truncate components-text emotion-0 emotion-1 emotion-2"
  data-wp-c16t="true"
  data-wp-component="Text"
>
  Lorem ipsum.
</span>
`;
